fix: improve xml content parser
ignore prolog and doctype and wrap content with a randomly generated tag

(cherry picked from commit 0f312d6aca62923e7be7598127ed0248f9ed76a8)